# dagster_platform_example

./: 404.html  CHANGELOG.md  CLAUDE.md  README.md  dagster_platform_guide.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: docs.yml
architecture/platform-overview/: index.html
dagster-platform/: pyproject.toml  setup.py
dagster-platform/observability/: __init__.py
dagster-platform/observability/hooks/: __init__.py  execution_hooks.py  notification_hooks.py
dagster-platform/observability/sensors/: __init__.py  file_sensor.py  schedule_sensor.py
dagster-platform/platform_core/: __init__.py
dagster-platform/platform_core/asset_checks/: __init__.py  data_quality_checks.py  freshness_checks.py  schema_checks.py
dagster-platform/platform_core/resources/: __init__.py  api_resources.py  aws_resources.py  database_resources.py
dagster-platform/sdk/: __init__.py
dagster-platform/sdk/decorators/: __init__.py  asset_decorators.py  compute_decorators.py
dagster-platform/sdk/factories/: __init__.py  asset_factories.py
dagster-project-template/: cookiecutter.json
dagster-project-template/{{cookiecutter.project_name}}/assets/: __init__.py
dagster-project-template/{{cookiecutter.project_name}}/assets/bronze/: raw_data_ingestion.py
dagster-project-template/{{cookiecutter.project_name}}/jobs/: __init__.py  data_pipeline.py
docs/: index.md  requirements.txt
docs/architecture/: compute-orchestration.md  data-layers.md  platform-overview.md  resource-management.md
docs/assets/stylesheets/: extra.css
docs/getting-started/: installation.md  overview.md  project-setup.md  quick-start.md
docs/platform-core/: asset-checks.md  partitions.md  resources.md
docs/reference/: api-docs.md  troubleshooting.md
getting-started/installation/: index.html
getting-started/overview/: index.html
getting-started/quick-start/: index.html
overrides/: main.html
reference/api-docs/: index.html
reference/troubleshooting/: index.html
search/: search_index.json
(+2 files in other folders)
